kubernetes/taxi-trip-aggregated-visualisations/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregated-visualisations
  namespace: default
spec:
  selector:
    deploy: aggregated-visualisations
  ports:
  - port: 80
    targetPort: 80
