kubernetes/taxi-trip-aggregated-visualisations/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aggregated-visualisations-ingress
  namespace: default
spec:
  rules:
  - host: av.cloud.elite-se.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: aggregated-visualisations
          servicePort: 80
